--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-392.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-321.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-459.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-585.8KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1006.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-234.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-499.2KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-184.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-648.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-446.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-211.4KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇯🇵 日本-2.00MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: jp1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-251.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-459.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-234.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-499.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
