--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-184.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-648.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-446.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇯🇵 日本-211.4KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
   - {name: 🇯🇵 日本-2.00MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-184.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-648.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
