--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-205.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-251.4KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.81MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-211.4KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: jp1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-251.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-370.3KB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-251.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-637.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-370.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
